@@ -30,9 +30,6 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA
 #include "gengtype.h"
 #include "gengtype-yacc.h"
 
-#undef YY_USE_PROTOS
-#define YY_DECL int yylex ()
-
 static void update_lineno (const char *l, size_t len);
 
 struct fileloc lexer_line;
